Added modules for each representative application layer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,12 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
-
 android {
-    compileSdkVersion 26
+    compileSdkVersion rootProject.ext.compileSDK
     defaultConfig {
         applicationId "br.ufs.uolchallenge"
-        minSdkVersion 14
-        targetSdkVersion 26
+        minSdkVersion rootProject.ext.minSDK
+        targetSdkVersion rootProject.ext.targetSDK
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -23,11 +20,14 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    implementation project(':presentation')
+
+    def mobileUIDependencies = rootProject.ext.mobileUIDependencies
+    def mobileUITestDependencies = rootProject.ext.mobileUITestDependencies
+
+    implementation mobileUIDependencies.kotlin
+    implementation mobileUIDependencies.appCompat
+
+    testImplementation mobileUITestDependencies.junit
 }
