--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    ext.kotlinGradlePlugin = '1.1.51'
+    ext.buildTools = '3.0.0'
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$buildTools"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinGradlePlugin"
     }
 }
+
+apply from: 'dependencies.gradle'
 
 allprojects {
     repositories {
