--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,6 +16,8 @@ ext {
     kotlinVersion = '1.1.51'
 
     //Libraries
+    okHttpVersion = '3.8.0'
+    retrofitVersion = '2.3.0'
     rxJavaVersion = '2.1.1'
     rxAndroidVersion = '2.0.1'
     supportLibraryVersion = '26.1.0'
@@ -37,8 +39,12 @@ ext {
     ]
 
     dataDependencies = [
-            kotlin: "org.jetbrains.kotlin:kotlin-stdlib-jre7:${kotlinVersion}",
-            rxJava: "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
+            kotlin               : "org.jetbrains.kotlin:kotlin-stdlib-jre7:${kotlinVersion}",
+            rxJava               : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
+            retrofit             : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+            retrofitRxJavaAdapter: "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
+            retrofitGsonConverter: "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
+            okHttpLogger         : "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
     ]
 
     dataTestDependencies = [
@@ -64,8 +70,8 @@ ext {
     ]
 
     mobileUITestDependencies = [
-            kotlin   : "org.jetbrains.kotlin:kotlin-stdlib-jre7:${kotlinVersion}",
-            junit  : "junit:junit:${jUnitVersion}",
+            kotlin: "org.jetbrains.kotlin:kotlin-stdlib-jre7:${kotlinVersion}",
+            junit : "junit:junit:${jUnitVersion}",
     ]
 
 }
