Implementation for infrastructure, with integration tests

--- a/data-infrastructure/build.gradle
+++ b/data-infrastructure/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testImplementation dataTestDependencies.junit
     testImplementation dataTestDependencies.assertj
     testImplementation dataTestDependencies.mockito
+    testImplementation dataTestDependencies.mockWebServer
 
 }
 
