Added behaviors for networking feedback and loading coordination

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation presentationDependencies.rxJava
 
     testImplementation presentationTestDependencies.junit
+    testImplementation presentationTestDependencies.mockito
 
 }
 
