Added models mapper with related helpers

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 
     testImplementation presentationTestDependencies.junit
     testImplementation presentationTestDependencies.mockito
+    testImplementation presentationTestDependencies.assertj
 
 }
 
