--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }-{{ checksum  "presentation/build.gradle" }-{{ checksum  "domain/build.gradle" }-{{ checksum  "data-infrastructure/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum  "presentation/build.gradle" }}-{{ checksum  "domain/build.gradle" }}-{{ checksum  "data-infrastructure/build.gradle" }}
       - run:
           name: Download Dependencies
           command: ./gradlew dependencies --no-daemon
