Added several imagery for error states and hooked proper UI to these scenarios

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation mobileUIDependencies.appCompat
     implementation mobileUIDependencies.cardView
     implementation mobileUIDependencies.recyclerView
+    implementation mobileUIDependencies.design
     implementation mobileUIDependencies.picasso
 
     testImplementation mobileUITestDependencies.junit
