--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,3 +43,12 @@ dependencies {
 
     testImplementation mobileUITestDependencies.junit
 }
+
+configurations.all {
+    resolutionStrategy {
+        forcedModules = [
+                "org.jetbrains.kotlin:kotlin-stdlib:${rootProject.ext.kotlinVersion}",
+                "org.jetbrains.kotlin:kotlin-reflect:${rootProject.ext.kotlinVersion}"
+        ]
+    }
+}
