--- a/data-infrastructure/build.gradle
+++ b/data-infrastructure/build.gradle
@@ -1,4 +1,44 @@
-apply plugin: 'kotlin'
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+
+android {
+    def globalConfiguration = rootProject.extensions.getByName("ext")
+
+    compileSdkVersion globalConfiguration["compileSDK"]
+    buildToolsVersion globalConfiguration["buildToolsVersion"]
+
+    defaultConfig {
+        minSdkVersion globalConfiguration["minSDK"]
+        targetSdkVersion globalConfiguration["targetSDK"]
+    }
+
+    dexOptions {
+        preDexLibraries = false
+        dexInProcess = false
+        javaMaxHeapSize "4g"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
+
+    lintOptions {
+        quiet true
+        abortOnError false
+        ignoreWarnings true
+        disable 'InvalidPackage'
+        disable 'OldTargetApi'
+    }
+}
 
 dependencies {
 
@@ -7,6 +47,7 @@ dependencies {
 
     implementation project(':domain')
     implementation dataDependencies.kotlin
+    implementation dataDependencies.kotlinReflect
     implementation dataDependencies.rxJava
     implementation dataDependencies.retrofit
     implementation dataDependencies.retrofitRxJavaAdapter
@@ -17,16 +58,6 @@ dependencies {
     testImplementation dataTestDependencies.assertj
     testImplementation dataTestDependencies.mockito
     testImplementation dataTestDependencies.mockWebServer
+    testImplementation dataTestDependencies.roboletric
 
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = rootProject.ext.kotlinJVMTarget
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = rootProject.ext.kotlinJVMTarget
-    }
 }
