Added tests for news content infrastructure

--- a/data-infrastructure/build.gradle
+++ b/data-infrastructure/build.gradle
@@ -38,6 +38,12 @@ android {
         disable 'InvalidPackage'
         disable 'OldTargetApi'
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
